omni/tests/goldens/types/unknown_type_05.err
tests/goldens/types/unknown_type_05.omni:1:1: error: type mismatch: cannot assign int to Mystery5
     1 | let value5:Mystery5 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery5 or change the variable type to int
