omni/tests/goldens/types/unknown_type_05.omni
let value5:Mystery5 = 1
